--- a/Tutorial/Noob Heart.ipynb
+++ b/Tutorial/Noob Heart.ipynb
@@ -77,7 +77,7 @@
     "df = pd.read_csv('PURE_dataset_index.csv')\n",
     "files_pure = df['file']\n",
     "labels = [{'fold':'train'}]*49+[{'fold':'valid'}]*10 #Divide the training set and validation set\n",
-    "#dump_dataset(\"pure_dataset.h5\", files_pure, loader_pure, labels=labels)\n",
+    "dump_dataset(\"pure_dataset.h5\", files_pure, loader_pure, labels=labels)\n",
     "\n",
     "df = pd.read_csv('UBFC_rPPG2_dataset_index.csv')\n",
     "files_ubfc = df['file']\n",
@@ -121,7 +121,7 @@
     "sys.path.append(\"..\")\n",
     "from utils import *\n",
     "dump_datatape(\"pure_dataset.h5\", \"train_tape.h5\", shape=(32, 8, 8), step=1, extend_rate=1, extend_hr=(40, 150), fold='train', sample=cv2.INTER_AREA)\n",
-    "#dump_datatape(\"pure_dataset.h5\", \"valid_tape.h5\", shape=(32, 8, 8), step=1, extend_rate=0, fold='valid', sample=cv2.INTER_AREA)"
+    "dump_datatape(\"pure_dataset.h5\", \"valid_tape.h5\", shape=(32, 8, 8), step=1, extend_rate=0, fold='valid', sample=cv2.INTER_AREA)"
    ]
   },
   {
