--- a/Tutorial/Noob Heart.ipynb
+++ b/Tutorial/Noob Heart.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "## Prepare training data for the model  \n",
     "\n",
-    "Use load_datatape to load datatape, which becomes a generator object after loading. However, the model cannot use it directly for training; it needs to be wrapped as a TensorFlow dataset using to_tf. When using the dataset, you can add .cache(), which allows caching all datasets into memory. Since our training data is small, this is feasible. In addition, cache can take parameters; using .cache(cache_file_path) can cache on high-speed SSDs."
+    "Use load_datatape to load datatape, which becomes a generator object after loading. However, the model cannot use it directly for training; it needs to be wrapped as a TensorFlow dataset using `to_tf`. When using the dataset, you can add `.cache()`, which allows caching all datasets into memory. Since our training data is small, this is feasible. In addition, cache can take parameters; using `.cache(cache_file_path)` can cache on high-speed SSDs."
    ]
   },
   {
