--- a/Tutorial/Noob Heart.ipynb
+++ b/Tutorial/Noob Heart.ipynb
@@ -233,7 +233,7 @@
     "`train.shuffle(n).batch(32)` means caching n data from the dataset and randomly drawing from the cache to shuffle the data. \n",
     "`.batch(32)` specifies batch_size is 32. \n",
     "`epochs=10` are the number of training rounds.   \n",
-    "The callbacks specify functions that need to be called after each round of training, here adding a validation function, if the validation set loss decreases, then save this best model. \n",
+    "The `callbacks` specify functions that need to be called after each round of training, here adding a validation function, if the validation set loss decreases, then save this best model. \n",
     "After training is complete, read the saved best model."
    ]
   },
