--- a/Tutorial/Noob Heart.ipynb
+++ b/Tutorial/Noob Heart.ipynb
@@ -19,9 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.popen('python dataset_generate_cache.py').read()"
@@ -50,21 +61,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "制作 dataset ubfc_dataset.h5 中.....\n"
+      "Generating dataset pure_dataset.h5 .....\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [06:47<00:00,  9.70s/it]\n"
+      "100%|██████████| 59/59 [15:36<00:00, 15.88s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating dataset ubfc_dataset.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 42/42 [00:03<00:00, 12.89it/s]\n"
      ]
     }
    ],
@@ -98,21 +123,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "制作 datatape train_tape.h5 中.....\n"
+      "Generating datatape train_tape.h5 .....\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:54<00:00,  1.07it/s]\n"
+      "100%|██████████| 59/59 [01:26<00:00,  1.47s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape valid_tape.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 59/59 [00:16<00:00,  3.50it/s]\n"
      ]
     }
    ],
@@ -136,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,21 +218,21 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "layer_normalization_3 (Layer (None, 32, 8, 8, 3)       64        \n",
+      "layer_normalization (LayerNo (None, 32, 8, 8, 3)       64        \n",
       "_________________________________________________________________\n",
-      "conv3d_3 (Conv3D)            (None, 32, 4, 4, 4)       100       \n",
+      "conv3d (Conv3D)              (None, 32, 4, 4, 4)       100       \n",
       "_________________________________________________________________\n",
-      "layer_normalization_4 (Layer (None, 32, 4, 4, 4)       64        \n",
+      "layer_normalization_1 (Layer (None, 32, 4, 4, 4)       64        \n",
       "_________________________________________________________________\n",
-      "conv3d_4 (Conv3D)            (None, 32, 2, 2, 2)       66        \n",
+      "conv3d_1 (Conv3D)            (None, 32, 2, 2, 2)       66        \n",
       "_________________________________________________________________\n",
-      "layer_normalization_5 (Layer (None, 32, 2, 2, 2)       64        \n",
+      "layer_normalization_2 (Layer (None, 32, 2, 2, 2)       64        \n",
       "_________________________________________________________________\n",
-      "average_pooling3d_1 (Average (None, 32, 1, 1, 2)       0         \n",
+      "average_pooling3d (AveragePo (None, 32, 1, 1, 2)       0         \n",
       "_________________________________________________________________\n",
-      "conv3d_5 (Conv3D)            (None, 32, 1, 1, 1)       3         \n",
+      "conv3d_2 (Conv3D)            (None, 32, 1, 1, 1)       3         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 32)                0         \n",
+      "flatten (Flatten)            (None, 32)                0         \n",
       "=================================================================\n",
       "Total params: 361\n",
       "Trainable params: 361\n",
@@ -209,9 +248,9 @@
     "model = keras.Sequential([\n",
     "    layers.Input(shape=(32, 8, 8, 3)),\n",
     "    layers.LayerNormalization(axis=(1,)),\n",
-    "    layers.Conv3D(4, (2, 2, 2), (1, 2, 2), padding='same', activation='relu'),\n",
+    "    layers.Conv3D(4, (2, 2, 2), (1, 2, 2), padding='same', activation='tanh'),\n",
     "    layers.LayerNormalization(axis=(1,)),\n",
-    "    layers.Conv3D(2, (2, 2, 2), (1, 2, 2), padding='same', activation='relu'),\n",
+    "    layers.Conv3D(2, (2, 2, 2), (1, 2, 2), padding='same', activation='tanh'),\n",
     "    layers.LayerNormalization(axis=(1,)),\n",
     "    layers.AvgPool3D((1, 2, 2)),\n",
     "    layers.Conv3D(1, 1, 1),\n",
@@ -233,7 +272,7 @@
     "`train.shuffle(n).batch(32)` means caching n data from the dataset and randomly drawing from the cache to shuffle the data. \n",
     "`.batch(32)` specifies batch_size is 32. \n",
     "`epochs=10` are the number of training rounds.   \n",
-    "The `callbacks` specify functions that need to be called after each round of training, here adding a validation function, if the validation set loss decreases, then save this best model. \n",
+    "The callbacks specify functions that need to be called after each round of training, here adding a validation function, if the validation set loss decreases, then save this best model. \n",
     "After training is complete, read the saved best model."
    ]
   },
@@ -247,25 +286,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "210/210 [==============================] - 2s 3ms/step - loss: 0.7526 - val_loss: 0.6492\n",
+      "213/213 [==============================] - 12s 47ms/step - loss: 0.7243 - val_loss: 0.5985\n",
       "Epoch 2/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.6493 - val_loss: 0.5917\n",
+      "213/213 [==============================] - 10s 46ms/step - loss: 0.6190 - val_loss: 0.5574\n",
       "Epoch 3/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.6048 - val_loss: 0.5529\n",
+      "213/213 [==============================] - 10s 46ms/step - loss: 0.5890 - val_loss: 0.5364\n",
       "Epoch 4/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.5844 - val_loss: 0.5399\n",
+      "213/213 [==============================] - 10s 46ms/step - loss: 0.5724 - val_loss: 0.5272\n",
       "Epoch 5/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.5725 - val_loss: 0.5285\n",
+      "213/213 [==============================] - 10s 46ms/step - loss: 0.5634 - val_loss: 0.5220\n",
       "Epoch 6/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.5648 - val_loss: 0.5243\n",
+      "213/213 [==============================] - 10s 45ms/step - loss: 0.5594 - val_loss: 0.5217\n",
       "Epoch 7/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.5602 - val_loss: 0.5228\n",
+      "213/213 [==============================] - 10s 45ms/step - loss: 0.5568 - val_loss: 0.5191\n",
       "Epoch 8/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.5571 - val_loss: 0.5199\n",
+      "213/213 [==============================] - 10s 46ms/step - loss: 0.5552 - val_loss: 0.5233\n",
       "Epoch 9/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.5554 - val_loss: 0.5171\n",
+      "213/213 [==============================] - 10s 46ms/step - loss: 0.5536 - val_loss: 0.5178\n",
       "Epoch 10/10\n",
-      "210/210 [==============================] - 0s 2ms/step - loss: 0.5537 - val_loss: 0.5177\n"
+      "213/213 [==============================] - 10s 46ms/step - loss: 0.5524 - val_loss: 0.5170\n"
      ]
     }
    ],
@@ -297,14 +336,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:01<00:00, 28.68it/s]\n"
+      "100%|██████████| 42/42 [00:05<00:00,  7.75it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.671, 'RMSE': 3.924, 'R': 0.97496},\n",
-       " 'Whole video': {'MAE': 0.983, 'RMSE': 1.528, 'R': 0.99669}}"
+       "{'Sliding window': {'MAE': 1.593, 'RMSE': 3.882, 'R': 0.97512},\n",
+       " 'Whole video': {'MAE': 1.007, 'RMSE': 1.543, 'R': 0.99657}}"
       ]
      },
      "execution_count": 8,
@@ -313,7 +352,7 @@
     }
    ],
    "source": [
-    "eval_on_dataset('ubfc_dataset.h5', model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_PURE_UBFC.h5')\n",
+    "eval_on_dataset('ubfc_dataset.h5', model, 32, (8, 8), step=0.5, batch=32, save='../results/NoobHeart_PURE_UBFC.h5')\n",
     "get_metrics('../results/NoobHeart_PURE_UBFC.h5')"
    ]
   },
