--- a/benchmark_RLAP/ours.ipynb
+++ b/benchmark_RLAP/ours.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -41,33 +32,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\profiler\\internal\\flops_registry.py:243: tensor_shape_from_node_def_name (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.tensor_shape_from_node_def_name`\n",
       "Flops per frame:260557\n",
-      "Model: \"m_1_6\"\n",
+      "Model: \"m_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "sequential_36 (Sequential)   (None, 450, 64)           12352     \n",
+      "sequential (Sequential)      (None, 450, 64)           12352     \n",
       "_________________________________________________________________\n",
-      "spectral_transform_12 (Spect multiple                  82560     \n",
+      "spectral_transform (Spectral multiple                  82560     \n",
       "_________________________________________________________________\n",
-      "conv1d_38 (Conv1D)           multiple                  41024     \n",
+      "conv1d_2 (Conv1D)            multiple                  41024     \n",
       "_________________________________________________________________\n",
-      "sequential_38 (Sequential)   (None, 450, 64)           256       \n",
+      "sequential_2 (Sequential)    (None, 450, 64)           256       \n",
       "_________________________________________________________________\n",
-      "spectral_transform_13 (Spect multiple                  49792     \n",
+      "spectral_transform_1 (Spectr multiple                  49792     \n",
       "_________________________________________________________________\n",
-      "conv1d_40 (Conv1D)           multiple                  10272     \n",
+      "conv1d_4 (Conv1D)            multiple                  10272     \n",
       "_________________________________________________________________\n",
-      "sequential_40 (Sequential)   (None, 450, 32)           128       \n",
+      "sequential_4 (Sequential)    (None, 450, 32)           128       \n",
       "_________________________________________________________________\n",
-      "sequential_41 (Sequential)   (None, 450)               33        \n",
+      "sequential_5 (Sequential)    (None, 450)               33        \n",
       "=================================================================\n",
       "Total params: 196,417\n",
       "Trainable params: 195,713\n",
@@ -143,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,24 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:01<00:00, 55.97it/s]\n"
+      "100%|██████████| 59/59 [00:02<00:00, 23.41it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 0.361, 'RMSE': 1.121, 'R': 0.99885},\n",
-       " 'Whole video': {'MAE': 0.336, 'RMSE': 0.462, 'R': 0.99982}}"
+       "{'Sliding window': {'MAE': 0.359, 'RMSE': 1.136, 'R': 0.99881},\n",
+       " 'Whole video': {'MAE': 0.338, 'RMSE': 0.52, 'R': 0.99978}}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,24 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:00<00:00, 57.16it/s]\n"
+      "100%|██████████| 42/42 [00:01<00:00, 37.50it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.325, 'RMSE': 3.577, 'R': 0.97847},\n",
-       " 'Whole video': {'MAE': 0.911, 'RMSE': 1.417, 'R': 0.9969}}"
+       "{'Sliding window': {'MAE': 1.296, 'RMSE': 3.567, 'R': 0.97857},\n",
+       " 'Whole video': {'MAE': 0.921, 'RMSE': 1.439, 'R': 0.99679}}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
