--- a/benchmark_RLAP/unsupervised.ipynb
+++ b/benchmark_RLAP/unsupervised.ipynb
@@ -2,26 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
+    "from models import *\n",
     "from utils import *\n",
     "from unsupervised_methods import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_model(method):\n",
+    "    ln = layers.LayerNormalization(axis=0)\n",
     "    def model(x):\n",
     "        x = np.mean(x, axis=(-3, -2))\n",
-    "        x = method(x)\n",
+    "        x = method(ln(x).numpy()+x.mean(axis=0))\n",
     "        x = (x-np.expand_dims(np.mean(x, axis=-1), -1))/(np.expand_dims(np.std(x, axis=-1), -1)+1e-6)\n",
     "        #print(x)\n",
     "        return x\n",
@@ -30,25 +32,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 179/179 [07:25<00:00,  2.49s/it]\n",
-      "100%|██████████| 165/165 [01:25<00:00,  1.92it/s]\n"
+      "100%|██████████| 179/179 [00:33<00:00,  5.30it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 6.859, 'RMSE': 15.566, 'R': 0.35696},\n",
-       " 'Whole video': {'MAE': 5.086, 'RMSE': 13.511, 'R': 0.40434}}"
+       "{'Sliding window': {'MAE': 6.901, 'RMSE': 15.957, 'R': 0.34075},\n",
+       " 'Whole video': {'MAE': 4.28, 'RMSE': 12.315, 'R': 0.48781}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,25 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 54/54 [01:41<00:00,  1.87s/it]\n",
-      "100%|██████████| 54/54 [00:18<00:00,  2.91it/s]\n"
+      "100%|██████████| 54/54 [00:06<00:00,  7.89it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 6.302, 'RMSE': 14.515, 'R': 0.4412},\n",
-       " 'Whole video': {'MAE': 3.537, 'RMSE': 9.869, 'R': 0.65948}}"
+       "{'Sliding window': {'MAE': 5.874, 'RMSE': 14.16, 'R': 0.44993},\n",
+       " 'Whole video': {'MAE': 2.649, 'RMSE': 8.2, 'R': 0.74057}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,25 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 54/54 [09:48<00:00, 10.89s/it]\n",
-      "100%|██████████| 54/54 [00:17<00:00,  3.01it/s]\n"
+      "100%|██████████| 54/54 [09:58<00:00, 11.08s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 6.446, 'RMSE': 12.995, 'R': 0.47014},\n",
-       " 'Whole video': {'MAE': 4.729, 'RMSE': 9.914, 'R': 0.6542}}"
+       "{'Sliding window': {'MAE': 4.558, 'RMSE': 9.911, 'R': 0.5697},\n",
+       " 'Whole video': {'MAE': 2.564, 'RMSE': 6.213, 'R': 0.82151}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
