--- a/benchmark_RLAP/TS-CAN.ipynb
+++ b/benchmark_RLAP/TS-CAN.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -48,13 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\profiler\\internal\\flops_registry.py:142: tensor_shape_from_node_def_name (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.tensor_shape_from_node_def_name`\n",
       "Flops per frame:52158718\n"
      ]
     }
@@ -78,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,24 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:27<00:00,  1.53it/s]\n"
+      "100%|██████████| 42/42 [00:23<00:00,  1.80it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.768, 'RMSE': 4.22, 'R': 0.9701},\n",
-       " 'Whole video': {'MAE': 0.986, 'RMSE': 1.436, 'R': 0.99698}}"
+       "{'Sliding window': {'MAE': 1.824, 'RMSE': 4.131, 'R': 0.97172},\n",
+       " 'Whole video': {'MAE': 1.022, 'RMSE': 1.478, 'R': 0.9968}}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
