--- a/dataset_process/dataset_process.ipynb
+++ b/dataset_process/dataset_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,163 @@
     "#生成UBFC数据集\n",
     "files_ubfc_rppg2 = df['file']\n",
     "dump_dataset(\"Z:/rppg/ubfc_rppg2_dataset.h5\", files_ubfc_rppg2, loader_ubfc_rppg2, compression=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../datasets/PURE_dataset_index.csv')\n",
+    "\n",
+    "#生成PURE数据集\n",
+    "files_pure = df['file']\n",
+    "dump_dataset(\"Z:/rppg/pure_dataset.h5\", files_pure, loader_pure, compression=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating dataset Z:/rppg/scamps_dataset1.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 4/2800 [00:20<06:32,  7.12it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../datasets/SCAMPS_dataset_index.csv')\n",
+    "files_scamps = df['file']\n",
+    "labels_scamps = [{'fold':i} for i in df['fold']]\n",
+    "dump_dataset(\"Z:/rppg/scamps_dataset.h5\", files_scamps, loader_scamps, compression=0, labels=labels_scamps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/scamps_datatape_32x36x36_train.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2800/2800 [14:54<00:00,  3.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/scamps_datatape_32x36x36_valid.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2800/2800 [03:01<00:00, 15.43it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_32x36x36_train.h5\", shape=(32, 36, 36), step=1, extend_rate=0, fold='train')\n",
+    "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_32x36x36_valid.h5\", shape=(32, 36, 36), step=1, extend_rate=0, fold='val')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/scamps_datatape_32x8x8_train.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2800/2800 [07:43<00:00,  6.04it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/scamps_datatape_32x8x8_valid.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2800/2800 [01:35<00:00, 29.31it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_32x8x8_train.h5\", shape=(32, 8, 8), step=1, extend_rate=0, fold='train')\n",
+    "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_32x8x8_valid.h5\", shape=(32, 8, 8), step=1, extend_rate=0, fold='val', sample=cv2.INTER_AREA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/scamps_datatape_128x32x32_train.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2800/2800 [13:11<00:00,  3.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/scamps_datatape_128x32x32_valid.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2800/2800 [02:38<00:00, 17.67it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_128x32x32_train.h5\", shape=(128, 32, 32), step=3, extend_rate=0, fold='train')\n",
+    "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_128x32x32_valid.h5\", shape=(128, 32, 32), step=3, extend_rate=0, fold='val', sample=cv2.INTER_AREA)"
    ]
   },
   {
